--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,8 +41,13 @@ body {
   background: #EDEDED;
 }
 
+h1, h2, h3, h4, h5 {
+  font-weight: 700 !important;
+}
+
 h1, h2, h3, h4, h5, p {
   color: $secondary-color;
+  font-family: 'Mulish', sans-serif !important;
 }
 
 .povio-logo {
