--- a/src/app/pages/overview/add-document/add-document.component.scss
+++ b/src/app/pages/overview/add-document/add-document.component.scss
@@ -11,6 +11,14 @@
   cursor: pointer;
 }
 
+.editing {
+  background: #d7d7d7;
+}
+
+.not-editing {
+  background: transparent;
+}
+
 .main-document-container {
   width: 100%;
   display: flex;
@@ -35,6 +43,8 @@
     gap: 1rem;
     justify-content: center;
     align-items: center;
+    position: sticky;
+    top: 0.75rem;
 
     .author-details, .modify-history {
       width: 100%;
@@ -74,8 +84,25 @@
       }
 
       .history-item {
+        display: flex;
+        flex-direction: column;
+        gap: 0.25rem;
+        justify-content: flex-start;
+        align-items: flex-start;
+
         h4 {
           margin: 0;
+        }
+
+        .history-list {
+          p {
+
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+            align-items: center;
+            gap: 0.5rem;
+          }
         }
       }
     }
@@ -141,6 +168,7 @@
       }
 
     }
+
     .document-description {
       margin-top: 0.5rem;
     }
@@ -163,6 +191,8 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    padding-top: 0.5rem;
+    border-top: 1px solid #909090;
 
     .comment {
       padding: 1rem 1.25rem;
