--- a/src/app/pages/overview/overview.component.scss
+++ b/src/app/pages/overview/overview.component.scss
@@ -126,6 +126,10 @@ mat-drawer-container {
       justify-content: center;
       align-items: center;
       margin-top: 2rem;
+
+      img {
+        width: 100%;
+      }
     }
 
     .overview-actions-wrapper, {
@@ -205,8 +209,9 @@ mat-drawer-container {
           padding: 2rem 1rem;
           margin: 2rem 1rem;
           border-radius: 20px;
-          background: #D9D9D9;
+          background: #f1f1f1;
           transition: all 0.25s ease-in-out;
+          box-shadow: 5px 5px 5px #ebebeb;
 
           h2 {
             display: flex;
@@ -218,7 +223,7 @@ mat-drawer-container {
           }
 
           &:hover {
-            background: #bababa;
+            background: #e6e6e6;
             transition: all 0.25s ease-in-out;
           }
 
@@ -447,5 +452,10 @@ mat-drawer-container {
 
   .filter-actions {
     flex-direction: column !important;
+  }
+
+  .sub-cat-icon {
+    width: 1rem;
+    height: 1rem;
   }
 }
